RHD-166 fix layout add z-index to footer in order to menu ovarlap the footer

--- a/dspace-jspui/src/main/webapp/static/css/bootstrap/dspace-theme.css
+++ b/dspace-jspui/src/main/webapp/static/css/bootstrap/dspace-theme.css
@@ -286,6 +286,7 @@ footer.container.navbar.navbar-inverse.navbar-bottom.navbar-square {
 	background: #8c1f7d;
 	background-image: none;
 	color: white;
+	z-index:0;
 } 
 footer.container.navbar.navbar-inverse.navbar-bottom.navbar-square a {
 	color: grey;
